[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/walls/hjm-mossy_wall_low.png" type="Texture" id=1]
[ext_resource path="res://tilesets/basic_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://custom_tile_map/CustomTileMap.gd" type="Script" id=3]
[ext_resource path="res://custom_tile_map/AStarMap.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 0.5

[node name="CustomTileMap" type="YSort"]
script = ExtResource( 3 )
tileset = ExtResource( 2 )

[node name="AStarMap" type="TileMap" parent="."]
format = 1
script = ExtResource( 4 )

[node name="CellBoundaries" type="YSort" parent="."]
visible = false

[node name="Shapes" type="YSort" parent="."]
visible = false

[node name="MouseCollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseCollision"]
shape = SubResource( 1 )

[node name="TestTilemap" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 0, 13, 0, 2, 13, 0, 4, 13, 0, 65537, 13, 0, 65539, 13, 0, 131072, 13, 0, 131074, 13, 0, 196609, 13, 0, 262144, 13, 0 )

[node name="Preview" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, 48 )
region_enabled = true
region_rect = Rect2( 777, 389, 64, 124 )
